#
#  udpxy is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with udpxy.  If not, see <http://www.gnu.org/licenses/>.
#

Build 14 (2-Jan-2008):
    (*) shutdown command removed

Build 15-18 (7-Jan-2008):
    (*) interface names get translated into IPv4 addresses
    (*) lock-enabled pidfile support added

Build 19 (9-Jan-2008):
    (*) 'lean' target added to makefile
    (*) -n (nice increment) option added

Build 20 (9-Jan-2008):
    (*) default settings changed for various options

Build 21-22 (16-Jan-2008):
    (*) Web GUI refinements (new design, 'restart' button added to status page)
    (*) mipsel-linux-uclibc-gcc support added to wl500-specific makefile
    (*) generation of wl500-specific source archive

Build 23 (18-Jan-2008):
    (*) Usage examples added to status page and command-line output
    (*) Copyright notice added to status page and usage
    (*) make for wl500 will not strip; no default compiler given

Build 24-30 (27-Feb-2008)
    (*) support for RTP over MPEG-TS added

Build 31 (28-Feb-2008)
    (*) bug-fix: lean target compile error corrected
    (*) release target for wl500 will not strip the executable

Build 32 (29-Feb-2008)
    (*) throughput statistics displayed on status page
    (*) log messages are timestamp-prepended now

Build 33 (23-Mar-2008)
    (*) udpxrec application added to record traffic into file
    (*) miliseconds added to log timestamps

Build 34 (23-Mar-2008)
    (*) Bug fix: core dumped if no pidfile specified

Build 35 (24-Mar-2008)
    (*) Bug fix: udpxy terminates with unlink error when run as a daemon

Build 36 (25-Mar-2008)
    (*) Bug fix: udpxrec: specifying a small buffer (-B) produces assert or SEGV