@@ -29,14 +29,14 @@ GZIP  := /bin/gzip
 MKDEPOPT := -MM
 DEBUG_ON := -g
 
-ALL_CFLAGS  = -W -Wall -Werror --pedantic $(CFLAGS) -O2
-ALL_CFLAGS += -ffunction-sections -fdata-sections
-
-LDFLAGS += -Wl,--gc-sections
+ALL_CFLAGS = -W -Wall -Werror --pedantic $(CFLAGS)
 
 SYSTEM=$(shell uname 2>/dev/null)
-ifeq ($(SYSTEM), FreeBSD)
+ifneq (,$(filter $(SYSTEM),FreeBSD))
 MAKE := gmake
+GZIP := /usr/bin/gzip
+endif
+ifneq (,$(filter $(SYSTEM),Darwin))
 GZIP := /usr/bin/gzip
 endif
 
@@ -182,7 +182,7 @@ dist:
 
 romfs:	release
 	$(ROMFSINST) /usr/sbin/udpxy
-
+	
 install: $(EXEC)
 	@mkdir -p -m 755 $(INSTALLROOT)/bin
 	@cp $(EXEC) $(INSTALLROOT)/bin
